--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
+@import "~bootstrap/dist/css/bootstrap.css";
+
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    background-color: #6FA6D9;
+  }
+
