--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,20 @@
-<p>user works!</p>
+<div class="container">
+    <div class="container">
+        <div class="card bg-dark text-white">
+            <!-- <img class="card-img" src="..." alt="Card image"> -->
+            <div class="card-img-overlay">
+                <h5 class="card-title"></h5>
+                <p class="card-text"></p>
+                <p class="card-text"></p>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <p>username</p>
+
+    </div>
+    <div class="container">
+        <p>repositories</p>
+
+    </div>
+</div>
