edit the repository styling background color

--- a/src/app/repository/repository.component.css
+++ b/src/app/repository/repository.component.css
@@ -4,7 +4,7 @@
 
 .container-fluid{
     background-color:#4777F2 ;
-    height:50vh;
+    height:100%;
     padding-top: 2%;
     margin-top: 2ch;
     text-align: center;
