--- a/src/app/repository/repository.component.html
+++ b/src/app/repository/repository.component.html
@@ -2,12 +2,18 @@
     <div class="input">
         <p>Search for user</p>
         <input class="username" name="username" #username>
-        <button class="username" (click)="searchUsername(username)">Search</button>
+        <button class="username" (click)="searchUsername(username.value)">Search</button>
         <p>Search for repository</p>
         <input class="repository" name="repository" #repository>
-        <button class="search" (click)="searchRepository(repository)"> Search</button>
+        <button class="search" (click)="searchRepository(repository.value)"> Search</button>
     </div>
+
     <div class="container-fluid">
         <p>Repositoires</p>
+        <div *ngFor='let repo of displayRepos; let i = index'>
+            <div *ngIf='24>i'>
+                {{repo}}
+            </div>
+        </div>
     </div>
 </div>
