--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="container">
         <div class="card bg-dark text-white">
-            <!-- <img class="card-img" src="..." alt="Card image"> -->
+            <img class="card-img" src="{{image}}" alt="Card image">
             <div class="card-img-overlay">
                 <h5 class="card-title"></h5>
                 <p class="card-text"></p>
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="card">
-        <p>username</p>
+        <p>{{username}}</p>
 
     </div>
     <div class="container">
