--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,15 @@
 <div class="container">
     <div class="container">
+        <p>Search for user</p>
+        <form action="">
+            <input class="username" name="username" [(ngModel)]=username>
+            <button class="username" (click)="searchUsername(username)">Search</button>
+        </form>
+
+    </div>
+    <div class="container">
         <div class="card bg-dark text-white">
-            <img class="card-img" src="{{image}}" alt="Card image">
+            <img class="card-img" src={{image}} alt="User image and details will appear here">
             <div class="card-img-overlay">
                 <h5 class="card-title"></h5>
                 <p class="card-text"></p>
@@ -9,12 +17,18 @@
             </div>
         </div>
     </div>
-    <div class="card">
+    <div class="container">
         <p>{{username}}</p>
 
     </div>
     <div class="container">
         <p>repositories</p>
+        <div *ngFor='let repo of repos; let i = index'>
+            <div>
+                {{repo}}
+            </div>
+
+        </div>
 
     </div>
 </div>
