edit repository appearance

--- a/src/app/myrepo/myrepo.component.html
+++ b/src/app/myrepo/myrepo.component.html
@@ -9,7 +9,7 @@
             </div>
         </div>
     </div>
-    <div class="card">
+    <div class="container">
         <p>username: {{mainUser.username}}</p>
 
     </div>
